--- a/ckrealstate/templates/base.html
+++ b/ckrealstate/templates/base.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="/static/css/style.css" />
   </head>
   <body>
 
@@ -155,7 +155,7 @@
         <h2 class="allheading">All <span>Properties</span></h2>
         <div class="allproperties-container">
           <div class="allproperties-box">
-            <img src="{% static 'images/portfolio1.jpg' %}" alt="" >
+            <img src="/static/images/portfolio1.jpg" alt="" >
 
             <div class="allproperties-layer">
               <h4>Click For Detail</h4>
